Trying to prevent text blurriness on Chrome

--- a/_scss/config/_reset.scss
+++ b/_scss/config/_reset.scss
@@ -8,7 +8,8 @@ html {
 
 /* Force antialiasing on texts for Webkit and Mozilla based browsers */
 html,
-body {
+body,
+* {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
