--- a/_scss/molecules/_hexagons.scss
+++ b/_scss/molecules/_hexagons.scss
@@ -115,6 +115,8 @@
       line-height: 130%;
       color: $BLACK;
 
+      -webkit-filter: blur(0.000001px);
+
       will-change: top, bottom, padding;
       -webkit-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
       -ms-transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
